Add oslo releases for queens Jan 8, 2018
Change-Id: I6339a0922d0eb0c89bb2c6578afe42023245454c

--- a/deliverables/queens/futurist.yaml
+++ b/deliverables/queens/futurist.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 03883f4ec646148e29f38376f65b33945cdccab0
         repo: openstack/futurist
     version: 1.5.0
+  - projects:
+      - hash: 8fff2242ff53735255247a1b126727e374fe9159
+        repo: openstack/futurist
+    version: 1.6.0
