--- a/deliverables/queens/oslo.cache.yaml
+++ b/deliverables/queens/oslo.cache.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 39ff06b63176c1de79db6ba6816da7274e154cc5
         repo: openstack/oslo.cache
     version: 1.27.0
+  - projects:
+      - hash: e52c99825cd888c9e7771697e189bfdba8cbe406
+        repo: openstack/oslo.cache
+    version: 1.28.0
