--- a/deliverables/queens/oslo.config.yaml
+++ b/deliverables/queens/oslo.config.yaml
@@ -31,3 +31,7 @@ releases:
       - hash: eb6ff02d4b863bad7bf04a5a78d501450e8c0b93
         repo: openstack/oslo.config
     version: 5.1.0
+  - projects:
+      - hash: 557861692fffb9af032caccc37c84a0189ebbf83
+        repo: openstack/oslo.config
+    version: 5.2.0
