--- a/deliverables/queens/oslo.context.yaml
+++ b/deliverables/queens/oslo.context.yaml
@@ -29,3 +29,7 @@ releases:
       - hash: a8d86df94099317f2918bd0cf1f147b822bfc599
         repo: openstack/oslo.context
     version: 2.19.3
+  - projects:
+      - hash: bfdeba62be37cb0f175e9abbefe750591be0f16d
+        repo: openstack/oslo.context
+    version: 2.20.0
