--- a/deliverables/queens/oslo.db.yaml
+++ b/deliverables/queens/oslo.db.yaml
@@ -33,3 +33,7 @@ releases:
       - hash: 85cf42e841bb59ddf294ec39286ce97e57a9faae
         repo: openstack/oslo.db
     version: 4.32.0
+  - projects:
+      - hash: ea1ec64274475465f35d68b93dc95b643a51830a
+        repo: openstack/oslo.db
+    version: 4.33.0
