--- a/deliverables/queens/oslo.log.yaml
+++ b/deliverables/queens/oslo.log.yaml
@@ -25,3 +25,7 @@ releases:
       - hash: a96f9fa7721e5314baff2f61bc86126045760842
         repo: openstack/oslo.log
     version: 3.35.0
+  - projects:
+      - hash: e29dc73e9eaf009e7fccd17dcb96abdaf787efe7
+        repo: openstack/oslo.log
+    version: 3.36.0
