--- a/deliverables/queens/oslo.messaging.yaml
+++ b/deliverables/queens/oslo.messaging.yaml
@@ -29,3 +29,7 @@ releases:
       - hash: b6b86bc7b97c63e34a1c561603d33c6d07c4f728
         repo: openstack/oslo.messaging
     version: 5.34.1
+  - projects:
+      - hash: 1ccdccddaa838a4715fd21e8eb67e207d172c240
+        repo: openstack/oslo.messaging
+    version: 5.35.0
