--- a/deliverables/queens/oslo.policy.yaml
+++ b/deliverables/queens/oslo.policy.yaml
@@ -49,3 +49,7 @@ releases:
       - hash: 8835af6aa5b3c039b0c1b74a2b697fb654ae24dd
         repo: openstack/oslo.policy
     version: 1.33.0
+  - projects:
+      - hash: 4f68708a495fa2237b62491e355db99fac1f7edb
+        repo: openstack/oslo.policy
+    version: 1.33.1
