--- a/deliverables/queens/oslo.privsep.yaml
+++ b/deliverables/queens/oslo.privsep.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: e93b540996b25abce3371bedc10768b4ad6cbb85
         repo: openstack/oslo.privsep
     version: 1.25.0
+  - projects:
+      - hash: aa882953db2ce475402988eeb9572c69a84bd030
+        repo: openstack/oslo.privsep
+    version: 1.26.0
