--- a/deliverables/queens/oslo.rootwrap.yaml
+++ b/deliverables/queens/oslo.rootwrap.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: a73ed854d3665ce6e26ea760354cb03577d4e992
         repo: openstack/oslo.rootwrap
     version: 5.12.1
+  - projects:
+      - hash: 68a64928ab46d960dc6ea8c9c48d850b4774891d
+        repo: openstack/oslo.rootwrap
+    version: 5.13.0
