--- a/deliverables/queens/oslo.serialization.yaml
+++ b/deliverables/queens/oslo.serialization.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: 50af68754a240b0cd49cdd40eaf0bbc2724fa7f3
         repo: openstack/oslo.serialization
     version: 2.22.0
+  - projects:
+      - hash: 9ac1d6b3e73f8b418f4bd0ef40405a71d17ec106
+        repo: openstack/oslo.serialization
+    version: 2.23.0
