--- a/deliverables/queens/oslo.service.yaml
+++ b/deliverables/queens/oslo.service.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: cf663888cf417f3ea3623ec9e66d410f37fb5593
         repo: openstack/oslo.service
     version: 1.28.1
+  - projects:
+      - hash: e753070ca2ac1b36d798b7c23b120531c68d0e9a
+        repo: openstack/oslo.service
+    version: 1.29.0
