--- a/deliverables/queens/oslo.utils.yaml
+++ b/deliverables/queens/oslo.utils.yaml
@@ -27,3 +27,7 @@ releases:
       - hash: 58fb709f58bd031c5114d9b6fe2e0926175b87b6
         repo: openstack/oslo.utils
     version: 3.33.0
+  - projects:
+      - hash: d9ec025c39ed7eb96ba172fada5f924cc850d91a
+        repo: openstack/oslo.utils
+    version: 3.34.0
