--- a/deliverables/queens/oslo.versionedobjects.yaml
+++ b/deliverables/queens/oslo.versionedobjects.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: 9d53c73f2635c4b7a3c1212849d22df13d2001e7
         repo: openstack/oslo.versionedobjects
     version: 1.30.0
+  - projects:
+      - hash: 98cea0fa98d3860151a7d5f5d2816ed9bd4e2592
+        repo: openstack/oslo.versionedobjects
+    version: 1.31.0
