--- a/deliverables/queens/oslo.vmware.yaml
+++ b/deliverables/queens/oslo.vmware.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 9574ad69aca08e478979c6f3ba2f232e6f589714
         repo: openstack/oslo.vmware
     version: 2.25.0
+  - projects:
+      - hash: 200706ed0ea56af48517442172f194cda6fa239e
+        repo: openstack/oslo.vmware
+    version: 2.26.0
