--- a/deliverables/queens/oslotest.yaml
+++ b/deliverables/queens/oslotest.yaml
@@ -17,5 +17,9 @@ releases:
       - hash: 507553bc4642723347bf57f2481c0eab9b28aa89
         repo: openstack/oslotest
     version: 3.0.0
-    highlights: >
-        Remove module oslotest.mockpatch
+    highlights: |
+      Remove module oslotest.mockpatch
+  - projects:
+      - hash: d17e3d220d1417658363047d6da63a8fb105f676
+        repo: openstack/oslotest
+    version: 3.1.0
