--- a/deliverables/queens/osprofiler.yaml
+++ b/deliverables/queens/osprofiler.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: ffd8d7d51b0fbfb0abe99671277b06dd888b4903
         repo: openstack/osprofiler
     version: 1.14.0
+  - projects:
+      - hash: 3370658fb3e7d414c689c850da82edd570a38649
+        repo: openstack/osprofiler
+    version: 1.15.0
