--- a/deliverables/queens/oslosphinx.yaml
+++ b/deliverables/queens/oslosphinx.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: eae6cb9cc716b6d2ce65ec1e0866c749fa125547
         repo: openstack/oslosphinx
     version: 4.17.0
+  - projects:
+      - hash: 1de073c3d2323aba6c9070da872482f2ed1f6b75
+        repo: openstack/oslosphinx
+    version: 4.18.0
