--- a/deliverables/queens/taskflow.yaml
+++ b/deliverables/queens/taskflow.yaml
@@ -25,3 +25,7 @@ releases:
       - hash: 4caeea11cc5fd755050653b89962397aee5218f1
         repo: openstack/taskflow
     version: 3.0.1
+  - projects:
+      - hash: c4ce1ab56cbbd8e7f2962e9578b19059244c825f
+        repo: openstack/taskflow
+    version: 3.1.0
