Add oslo releases for Pike Jan 8, 2018
Change-Id: I1e3d3866ff843d617f26d4861d74b389f0ac6104

--- a/deliverables/pike/castellan.yaml
+++ b/deliverables/pike/castellan.yaml
@@ -40,6 +40,10 @@ releases:
       - hash: 124e9296fe79412b510c73b35936a6be91267d18
         repo: openstack/castellan
     version: 0.12.1
+  - projects:
+      - hash: ee575f290ca2f82bf34d184d6f1f91901dff4684
+        repo: openstack/castellan
+    version: 0.12.2
 branches:
   - name: stable/pike
     location: 0.12.0
