--- a/deliverables/pike/oslo.serialization.yaml
+++ b/deliverables/pike/oslo.serialization.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: e56d91427c11a3813a0154d47e804018e580086e
         repo: openstack/oslo.serialization
     version: 2.20.1
+  - projects:
+      - hash: 01177314a1eef8b9c3e1a2cfaa06854be73f9881
+        repo: openstack/oslo.serialization
+    version: 2.20.2
 team: oslo
 type: library
