--- a/deliverables/pike/oslo.log.yaml
+++ b/deliverables/pike/oslo.log.yaml
@@ -59,5 +59,9 @@ releases:
       - hash: ad776e84b51223b85b7dfa85a7e77bb2f3848f4b
         repo: openstack/oslo.log
     version: 3.30.1
+  - projects:
+      - hash: 30e209e0e35d20e3bdd2589a2a0fad8142377665
+        repo: openstack/oslo.log
+    version: 3.30.2
 team: oslo
 type: library
