--- a/deliverables/pike/os-brick.yaml
+++ b/deliverables/pike/os-brick.yaml
@@ -43,5 +43,9 @@ releases:
       - hash: cad9fb07959e7b63208706e4970bd6171eda786b
         repo: openstack/os-brick
     version: 1.15.4
+  - projects:
+      - hash: 4090db76673cadb3b8adfceb106069e03414de49
+        repo: openstack/os-brick
+    version: 1.15.5
 team: cinder
 type: library
