--- a/deliverables/ocata/os-brick.yaml
+++ b/deliverables/ocata/os-brick.yaml
@@ -36,3 +36,7 @@ releases:
         hash: 6a180265560d5e0bab80e47ac25c15906d1165fb
     highlights: |
       - Fix compatibility for Nova encryptors.
+  - projects:
+      - hash: fc21f4f02026d2993bb7a7bb5f2324dbbece091b
+        repo: openstack/os-brick
+    version: 1.11.1
