--- a/deliverables/pike/ceilometer.yaml
+++ b/deliverables/pike/ceilometer.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: f5fed88724124a9f6c017d67fc0b7ac3c1ab139e
         repo: openstack/ceilometer
     version: 9.0.3
+  - projects:
+      - hash: f1689396845f3e551cb94d4f8e14ff0a3be884aa
+        repo: openstack/ceilometer
+    version: 9.0.4
 branches:
   - location: 9.0.0
     name: stable/pike
