--- a/deliverables/queens/ironic-inspector.yaml
+++ b/deliverables/queens/ironic-inspector.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 04e646c6429b128039a572805178ac99113bee5e
         repo: openstack/ironic-inspector
     version: 6.1.0
+  - projects:
+      - hash: c0c1dd813d6d212f44439147110e8c7b24892e42
+        repo: openstack/ironic-inspector
+    version: 7.0.0
