--- a/deliverables/_independent/puppet-pacemaker.yaml
+++ b/deliverables/_independent/puppet-pacemaker.yaml
@@ -14,3 +14,7 @@ releases:
     projects:
       - repo: openstack/puppet-pacemaker
         hash: 05cb65f467153315ce7c0957feba5b0b26dda80b
+  - version: 0.7.0
+    projects:
+      - repo: openstack/puppet-pacemaker
+        hash: b21823aa86f80511b63fdd59533b7a7077c8ac56
