--- a/deliverables/pike/monasca-agent.yaml
+++ b/deliverables/pike/monasca-agent.yaml
@@ -16,6 +16,10 @@ releases:
       - hash: b75320bfc2ea7dd9648be3f45f82c3663a917a74
         repo: openstack/monasca-agent
     version: 2.2.0
+  - projects:
+      - hash: 1b2edfa4ec724f0867401adbda1021d2e82c59ba
+        repo: openstack/monasca-agent
+    version: 2.2.1
 branches:
   - location: 2.2.0
     name: stable/pike
