os-vif: queens release 1.8.0
This is the first and so far only release for os-vif
in the queens series. Unless something major is needed
before the queens non-client library freeze, this will
also be the version we GA and branch for stable/queens.

This change also updates the release notes URL for the
pike deliverable.

Change-Id: Idd7f635295aff6e46391b82e45b89ef79d6d6c05

--- a/deliverables/queens/os-vif.yaml
+++ b/deliverables/queens/os-vif.yaml
@@ -2,5 +2,12 @@
 include-pypi-link: yes
 launchpad: os-vif
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/os-vif/unreleased.html
 team: nova
 type: library
+releases:
+  - version: 1.8.0
+    projects:
+      - repo: openstack/os-vif
+        hash: dff9093ab682d798e6165840cfae234f2a5372f5
+        tarball-base: os_vif
