novaclient: queens release 10.0.0
This is the first but probably not the last release
for python-novaclient in the queens series. We still
have a few changes up for review for new microversion
support that we'd like to get in before queens feature
freeze, but we should get a release out now to make sure
it plays well with other services in the ecosystem.

Depends-On: I60490f3d74212bb172dccc1c7d337198e1021236

Change-Id: Ie402bae6bab0012d4faed342eaa7c6a0011b86e9

--- a/deliverables/queens/python-novaclient.yaml
+++ b/deliverables/queens/python-novaclient.yaml
@@ -2,7 +2,11 @@
 include-pypi-link: yes
 launchpad: python-novaclient
 release-model: cycle-with-intermediary
+release-notes: https://docs.openstack.org/releasenotes/python-novaclient/unreleased.html
 team: nova
 type: library
-# NOTE(tonyb): Due to merging https://review.openstack.org/493187/ on pike the
-#             first releases of novaclient for queens much be >= 9.3.0
+releases:
+  - version: 10.0.0
+    projects:
+      - hash: fefc3ba723865307f4cc2ca287eb59faa4e8a5b1
+        repo: openstack/python-novaclient
