--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -142,3 +142,7 @@ releases:
       - hash: fb520fd55129f8e5940b4959b99a5defb9a83bf0
         repo: openstack/openstackdocstheme
     version: 1.18.0
+  - projects:
+      - hash: 93f717417b98a3527f922c11abb9f351068ebdfe
+        repo: openstack/openstackdocstheme
+    version: 1.18.1
