--- a/deliverables/queens/osc-lib.yaml
+++ b/deliverables/queens/osc-lib.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: a8e71b0565e94cdd47d0550ada2555dca45a85d5
         repo: openstack/osc-lib
     version: 1.8.0
+  - projects:
+      - hash: 281183216b91b1a38b2e42dc2426e182e5cffab1
+        repo: openstack/osc-lib
+    version: 1.9.0
