--- a/deliverables/queens/monasca-common.yaml
+++ b/deliverables/queens/monasca-common.yaml
@@ -16,3 +16,7 @@ releases:
       - hash: f08e707b1648e62a7afd8260b614a511fac59081
         repo: openstack/monasca-common
     version: 2.6.0
+  - projects:
+      - hash: 5585cd14702fe7c24878093dea4f0c13ef4abf8a
+        repo: openstack/monasca-common
+    version: 2.7.0
