Add oslo releases for queens Jan 15, 2018
Change-Id: If4fdf2aadcddc5f8cd0843135a0afafa7803d553

--- a/deliverables/queens/automaton.yaml
+++ b/deliverables/queens/automaton.yaml
@@ -13,3 +13,7 @@ releases:
       - hash: 67b25ef3d05ef91f4662a35c210b467500a78ff0
         repo: openstack/automaton
     version: 1.13.1
+  - projects:
+      - hash: 90f3ed251084952b43b89a172895a005182e6970
+        repo: openstack/automaton
+    version: 1.14.0
