--- a/deliverables/queens/castellan.yaml
+++ b/deliverables/queens/castellan.yaml
@@ -28,3 +28,7 @@ releases:
       - hash: c67357173e6e7127ad1f4528cb243bd96b91efad
         repo: openstack/castellan
     version: 0.16.0
+  - projects:
+      - hash: 8e2929b8779eaa03f15a25da5cf64ef8539a026b
+        repo: openstack/castellan
+    version: 0.17.0
