--- a/deliverables/queens/oslo.concurrency.yaml
+++ b/deliverables/queens/oslo.concurrency.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 9584101c993747d28fd36ebbf93792c053eaaf54
         repo: openstack/oslo.concurrency
     version: 3.24.0
+  - projects:
+      - hash: 55e06261aa86c87c7c059fbddc97cdbaae06e8dd
+        repo: openstack/oslo.concurrency
+    version: 3.25.0
