--- a/deliverables/queens/oslo.middleware.yaml
+++ b/deliverables/queens/oslo.middleware.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: 9d75e6c1fe43d1e4b43d1d9262473cc60aa01e76
         repo: openstack/oslo.middleware
     version: 3.33.0
+  - projects:
+      - hash: abfd726a52bc5ac85083bac79cf905d4d8d2c903
+        repo: openstack/oslo.middleware
+    version: 3.34.0
