--- a/deliverables/queens/oslo.reports.yaml
+++ b/deliverables/queens/oslo.reports.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: 80ec3ef091c847973a5b124610ba878b43b8d80e
         repo: openstack/oslo.reports
     version: 1.25.0
+  - projects:
+      - hash: c7ac43b0ead276621029160ac7630a5bf8ef217c
+        repo: openstack/oslo.reports
+    version: 1.26.0
