--- a/deliverables/queens/oslo.utils.yaml
+++ b/deliverables/queens/oslo.utils.yaml
@@ -31,3 +31,7 @@ releases:
       - hash: d9ec025c39ed7eb96ba172fada5f924cc850d91a
         repo: openstack/oslo.utils
     version: 3.34.0
+  - projects:
+      - hash: a449545a196c6940e56fd1e319b96f85f588ba0d
+        repo: openstack/oslo.utils
+    version: 3.35.0
