--- a/deliverables/queens/oslo.versionedobjects.yaml
+++ b/deliverables/queens/oslo.versionedobjects.yaml
@@ -25,3 +25,7 @@ releases:
       - hash: 98cea0fa98d3860151a7d5f5d2816ed9bd4e2592
         repo: openstack/oslo.versionedobjects
     version: 1.31.0
+  - projects:
+      - hash: 3eefca693eab8b313d17d528bef544035b1707b4
+        repo: openstack/oslo.versionedobjects
+    version: 1.31.1
