--- a/deliverables/queens/osprofiler.yaml
+++ b/deliverables/queens/osprofiler.yaml
@@ -21,3 +21,7 @@ releases:
       - hash: 3370658fb3e7d414c689c850da82edd570a38649
         repo: openstack/osprofiler
     version: 1.15.0
+  - projects:
+      - hash: 0895a4bb91beb0b97ed3711887f28d3e9dc8b9de
+        repo: openstack/osprofiler
+    version: 1.15.1
