Cut stable/queens for monasca-statsd
Change-Id: I4dfe9aa33a15548c415060d5f632239535f377ac

--- a/deliverables/queens/monasca-statsd.yaml
+++ b/deliverables/queens/monasca-statsd.yaml
@@ -12,3 +12,6 @@ releases:
       - hash: 00b817158420f522a07019693d8b4583f1806180
         repo: openstack/monasca-statsd
     version: 1.9.0
+branches:
+  - name: stable/queens
+    location: 1.9.0
