--- a/deliverables/pike/python-tackerclient.yaml
+++ b/deliverables/pike/python-tackerclient.yaml
@@ -9,6 +9,10 @@ releases:
     projects:
       - repo: openstack/python-tackerclient
         hash: 8db716c68ccccc024961c957a2338f4c7347455c
+  - version: 0.10.1
+    projects:
+      - repo: openstack/python-tackerclient
+        hash: 593762fb782c6dfea4546435a9927ac14515e3b6
 branches:
   - name: stable/pike
     location: 0.10.0
