--- a/deliverables/pike/tacker.yaml
+++ b/deliverables/pike/tacker.yaml
@@ -11,3 +11,7 @@ releases:
     projects:
       - repo: openstack/tacker
         hash: 54175b3f18f631f21fb1cb929712823bb3e2b05e
+  - version: 0.8.1
+    projects:
+      - repo: openstack/tacker
+        hash: 90f5374f73ea8dd5f41c9ca8f2ed447d5a37285a
