--- a/deliverables/queens/ironic.yaml
+++ b/deliverables/queens/ironic.yaml
@@ -8,3 +8,7 @@ releases:
       - hash: 0d944da575b8d493e5fef9ee63262b8ea5da44b8
         repo: openstack/ironic
     version: 9.2.0
+  - projects:
+      - hash: 76945299a86babcda300b073e1604ac0aeeb13d3
+        repo: openstack/ironic
+    version: 10.0.0
