--- a/deliverables/queens/ironic-python-agent.yaml
+++ b/deliverables/queens/ironic-python-agent.yaml
@@ -9,3 +9,7 @@ releases:
       - hash: 79568eecbf2237e0b35cee03370fc7bb94687d4c
         repo: openstack/ironic-python-agent
     version: 3.0.0
+  - projects:
+      - hash: e21f19808bede895526ae37e9b23b5ed457f4fe8
+        repo: openstack/ironic-python-agent
+    version: 3.1.0
