os-vif: queens release 1.9.0
- This is change reverts a change to the
  os-vif subnet object which broke kuryr-kubernetes.
  Ie1b65fb29b6abcf77a531404e67c7e60b2183c19
- This change also disables the pyroute2
  driver due to a file handle leak in pyroute2,
  and introduces an iptools driver as a workaround for queens.
  The iptools driver will be removed in rocky once a suitable
  release of pyroute2 is available.
  Idbb3c6b09ff8a883863925cd0db9b552b726a54d

Change-Id: I1d0b52bb8893e6b892af579c0a5d3216859f1e5b

--- a/deliverables/queens/os-vif.yaml
+++ b/deliverables/queens/os-vif.yaml
@@ -11,3 +11,8 @@ releases:
       - repo: openstack/os-vif
         hash: dff9093ab682d798e6165840cfae234f2a5372f5
         tarball-base: os_vif
+  - version: 1.9.0
+    projects:
+      - repo: openstack/os-vif
+        hash: 87e0edde4d190549867e4a0be0c544c5f080213d
+        tarball-base: os_vif
