openstack-doc-tools 1.7.0
New version for Queens with collected fixes.

Change-Id: I3840b0f8d59bd3f8e3e0c9412b8499da66d518c3

--- a/deliverables/_independent/openstack-doc-tools.yaml
+++ b/deliverables/_independent/openstack-doc-tools.yaml
@@ -84,3 +84,7 @@ releases:
     projects:
       - repo: openstack/openstack-doc-tools
         hash: 980c84aea1f7c737abfc5cabea7f8e7b535bd43e
+  - version: 1.7.0
+    projects:
+      - repo: openstack/openstack-doc-tools
+        hash: 6a568b9aaf70a1412507fb7e49cd92a9a4183140
