os-api-ref 1.5.0
collected fixes for queens.

Change-Id: Ice45ad73cd98d115eb1e7775d06e5b0c96b601a1

--- a/deliverables/_independent/os-api-ref.yaml
+++ b/deliverables/_independent/os-api-ref.yaml
@@ -39,3 +39,7 @@ releases:
     projects:
       - repo: openstack/os-api-ref
         hash: a67ed2f23528e97d698ddddebfc3eefd8b4267a0
+  - version: 1.5.0
+    projects:
+      - repo: openstack/os-api-ref
+        hash: cb41558e539d7797747352949f7785fabe5ed7eb
