--- a/deliverables/queens/cliff.yaml
+++ b/deliverables/queens/cliff.yaml
@@ -17,3 +17,7 @@ releases:
       - hash: fa2de57c02c4ab677558f33fd9ba07382f700b39
         repo: openstack/cliff
     version: 2.10.0
+  - projects:
+      - hash: 134ebd4a9a5d981f3bccf4f074adc63f1df72f80
+        repo: openstack/cliff
+    version: 2.11.0
